test/golden/1398692563425247859.golden

INITIALPATH:7:22: error:
    • INITIALPATH:10:6:
   |
10 | {pi:l}|]
   |      ^

unexpected "}"
expecting "<", ">", "^" or "="

    • In the quasi-quotation: [fmt|hello


{pi:l}|]
  |
7 | main = putStrLn [fmt|hello
  |                      ^^^^^...
